[gd_scene load_steps=9 format=2]

[ext_resource path="res://models/texture.png" type="Texture" id=1]
[ext_resource path="res://models/fence.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Scripts/Misc/Fence.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.39524, 1.56188, 2.08303 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.434995, 1.70451, 2.046 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SphereMesh" id=5]

[node name="Fence" type="StaticBody"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53083, -1.11333 )
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.117926, 1.503, -0.111334 )
shape = SubResource( 2 )

[node name="SnapZone" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SnapZone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.136632, 1.55058, -0.129214 )
shape = SubResource( 3 )

[node name="LeftPost" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.55058 )

[node name="MeshInstance" type="MeshInstance" parent="LeftPost"]
transform = Transform( 0.246945, 0, 0.139942, 0, 0.283841, 0, -0.139942, 0, 0.246945, 0, 4.02508, 0 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="RightPost" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.98129 )

[node name="MeshInstance2" type="MeshInstance" parent="RightPost"]
transform = Transform( -0.192404, 0, 0.237277, 0, 0.305482, 0, -0.237277, 0, -0.192404, 0, 4.02508, 0.484969 )
visible = false
mesh = SubResource( 5 )
material/0 = null
[connection signal="area_entered" from="SnapZone" to="." method="_on_SnapZone_area_entered"]
